2009-Mar-20	weaver	Tag V00-07-02.	Added collection "Query" messages for source
			level management.  Implemented partition id/multicast group
			assignments in management/[Source,Control]Level,PartitionMember and EvrManager.
2009-Mar-10	weaver	Tag V00-07-01.  Minor fixes to camera code.
2009-Mar-04	weaver	Tag V00-07-00.  Many changes to camera interfaces.  Now reads
			configuration from database and writes record on configure transition.
			Added a simple insert() to InDatagram class for appending data to
			an existing datagram.
2009-Feb-19	weaver  Added mon package for online monitoring support classes.
2009-Feb-13     cpo     Improved AcqManager, including out-of-synch detection
                        of dropped triggers.  EvgrManager now works at 360Hz
                        and sends down timestamps much like we expect the
                        MCC EVG to do.

2009-Jan-29	weaver	client/Fsm handles unmap/deallocate.  Added a default Sequeunce
			for L1 data that doesn't get one from an evr match.
2009-Jan-28	weaver	Tag V00-06-01.  zerocopy/dma_splice can now queue sparsely and
			share "release arguments" across many queued buffers.
			camera/DmaSplice,Frame,TwoDMoments added to support camera 
			feature extraction.  xtc/PayloadIterator added; CDatagramIterator 
			inherits from it.
2009-Jan-13	weaver	Tag V00-06-00.  Many changes to zero-copy eb including new
			dma_splice kernel module.
2008-Dec-19     cpo     Changes to evgr to support opcodes with rates
                        of 1,5,10,15,30,60,120,240Hz.  Also fix
                        for acqiris "Flags has been modified" warning and
                        bugs in Fsm.
2008-Nov-14     cpo     Tag V00-05-00.  Many changes to support exporting data to offline.
2008-Oct-28	weaver  Tag V00-04-00.  Fixed EbKey/Server dependencies.  Renamed InXtc->Xtc.
2008-Oct-27     cpo     Tag V00-03-01.  Forgot to add AcqServer files and
                        DmaEngine in utility.